- Added confirmation on photo delete - Added UI spinner on loading photos - Fixed buttons going off screen for Gallery-Page - TODO: Fix buttons going off screen for Gallery-View

--- a/Reflect/app/views/gallery-viewing/gallery-viewing-page.css
+++ b/Reflect/app/views/gallery-viewing/gallery-viewing-page.css
@@ -19,13 +19,17 @@
     border-width: 5;
     margin-left: 45;
     vertical-align: bottom;
-    margin-bottom: 55;
 }
 
 
 .image {
-    padding: 15px;
     background-color: #ededed;
     border-radius: 0;
-    margin-top: 0;
+    width: 310;
+    height: 310;
+    margin-top: 10;
+}
+
+.image-pic{
+    margin: 15;
 }
